So Ajuste Textual

--- a/PP-P001/exercicio06/exercicio06.ipynb
+++ b/PP-P001/exercicio06/exercicio06.ipynb
@@ -39,14 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rato\n"
+      "10\n",
+      "Cavalo\n"
      ]
     }
    ],
